--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <h3 class="web">Web Devoloper</h3>
                 <h5 class="web pt-3">Full Stack Web Devolopment in MEARN Stack based on India.</h5>
 
-                <a href=""><button class="contactme">Contact me <i class="fa-solid fa-chevron-right"></i></button></a>
+                <a href="#Contact"><button class="contactme">Contact me <i class="fa-solid fa-chevron-right"></i></button></a>
             </div>
             <div class="col-lg-4 ">
                 <img src="./images/49152973_1729357740501660_7326184406962405376_n.jpg" alt=""
