--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="col-lg-6 ">
                 <img src="./images/premium_photo-1678565869434-c81195861939.avif " alt="" class="w-100 aboutimg">
             </div>
-            <div class="col-lg-6  ">
+            <div class="col-lg-6 pt-5 ">
                 Hello there! I'm Arun, an aspiring full stack developer with a passion for creating innovative and
                 robust web applications. I thrive on the challenges of both front-end and back-end development and enjoy
                 crafting seamless user experiences. I take pride in creating visually appealing and responsive designs
